--- a/My Landing Page/src/style.css
+++ b/My Landing Page/src/style.css
@@ -44,17 +44,22 @@ button.dark-mode:hover {
 .header {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(-45deg,rgb(73, 12, 73), rgb(109, 57, 65), rgb(40, 70, 116), rgb(25, 132, 165));
-    background-size: 400% 400%;
+    background: linear-gradient(-45deg,rgb(73, 12, 73, 0.5), rgba(109, 57, 65, 0.9), rgb(40, 70, 116, 0.9), rgb(25, 132, 165, 0.5)), url('../img/nebula.jpeg');
+    background-size: 250%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
-    animation: backgroundTransition 8s ease-in-out infinite;
+    animation: backgroundTransition 16s ease-in-out infinite;
 }
 .header.dark-mode {
-    background: #1b1a1a;
+    animation: none;
+    background: linear-gradient(-45deg,rgba(27, 7, 27, 0.7), rgba(1, 21, 27, 0.7)), url('../img/blackhole.jpg');
+    background-size: 150%;
+    background-position: center;
+    background-repeat: no-repeat;
+    
 }
 
 h1 {
@@ -466,7 +471,13 @@ h3.dark-mode {
 /* RESPONSIVO */
 
 @media (max-width: 800px) {
+    .header.dark-mode{
+        background-size: 325%;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
     .header-image{
+        margin-top: 120px;
         height: 35%;
     }
     .container {
