--- a/My Landing Page/src/style.css
+++ b/My Landing Page/src/style.css
@@ -318,7 +318,32 @@ h3.dark-mode {
     text-decoration: none;
 }
 
+#iFrame{
+    width: 500px;
+    height: 520px;
+    top: 50%;
+    left: 50%;
+    border: none;
+}
+
 /* cards */
+.card-0{
+    height: 500px;
+    width: 300px;
+    margin: 3rem 0 0;
+    background-image: url(../api/api.html?surtarso);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(126, 236, 255);
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+    transition: 0.3s;
+}
 .card-1{ /*GITHUB*/
     height: 300px;
     width: 300px;
@@ -381,7 +406,6 @@ h3.dark-mode {
     height: 250px;
     width: 250px;
     margin: 3rem 0 0;
-    /* border-radius: 50%; */
     background-image: url(../img/tom.png);
     background-position: center;
     background-repeat: no-repeat;
