--- a/My Landing Page/api/css/api.css
+++ b/My Landing Page/api/css/api.css
@@ -7,14 +7,13 @@ body {
     background: transparent;
     font-family: "Helvetica Newe", Helvetica, sans-serif;
 }
-
 .chart {
-    position: absolute;
+    position: inherit;
     width: 400px;
     height: 420px;
-    top: 50%;
-    left: 65%;
-    margin: -225px 0 0 -225px;
+    top: 20%;
+    left: 15%;
+    margin: -2px 0 0 3px;
 }
 
 .pieTip {
