--- a/My Landing Page/src/style.css
+++ b/My Landing Page/src/style.css
@@ -298,8 +298,8 @@ h3.dark-mode {
 
 
 /* CARDS */
-.card-body{
-    width:min-content;
+.card-iframe{
+    margin-left: 30%;
 }
 .container {
     width: 100%;
@@ -495,6 +495,9 @@ h3.dark-mode {
     /* .loader {
         margin-bottom: 450px;
     } */
+    .card-iframe{
+        margin-left: 5%;
+    }
     button{
         margin-top: 23px;
         margin-left: 20px;
