--- a/My Landing Page/src/style.css
+++ b/My Landing Page/src/style.css
@@ -297,6 +297,15 @@ h3.dark-mode {
 }
 
 
+/* api iframe */
+#iFrame{
+    width: 400px;
+    height: 420px;
+    top: 50%;
+    left: 50%;
+    border: none;
+}
+
 /* CARDS */
 .card-iframe{
     margin-left: 30%;
@@ -318,14 +327,6 @@ h3.dark-mode {
     justify-content: space-evenly;
     width: 90%;
     text-decoration: none;
-}
-/* api iframe */
-#iFrame{
-    width: 400px;
-    height: 420px;
-    top: 50%;
-    left: 50%;
-    border: none;
 }
 
 /* cards */
@@ -542,7 +543,8 @@ h3.dark-mode {
         flex-direction: column;
     }
     .container .card-container:nth-child(1),
-    .container .card-container:nth-child(3) {
+    .container .card-container:nth-child(3),
+    .container .card-container:nth-child(5) {
         flex-direction: column-reverse;
     }
     .card {
