--- a/My Landing Page/src/style.css
+++ b/My Landing Page/src/style.css
@@ -166,19 +166,25 @@ h3.dark-mode {
     margin-bottom: 50px;
     transition: all 0.5s linear;
 }
+#rocket{
+    position: absolute;
+    left: 50%;
+    right: 50%;
 
+}
 #Rocket {
     width:40px;
     height:40px;
-    position: absolute;
     margin: 0;
     margin-top: 150px;
     padding: 15vh;
-    left: 50%;
-    right: 50%;
     animation: infinite-spinning 4s infinite;
     animation-timing-function: linear;
     transform-origin: 0% 0%;
+
+}
+#Rocket:hover {
+    animation-play-state: paused;
 }
   
 @keyframes infinite-spinning {
